# QT_Intermediate

Assignment_settings/: CMakeLists.txt  main.cpp
File_System/: CMakeLists.txt  main.cpp
Forex/: CMakeLists.txt
Groups_Settings/: CMakeLists.txt  main.cpp
Lock_file/: CMakeLists.txt  main.cpp
Navigate_Dir_recursively/: CMakeLists.txt  main.cpp
QData_STream/: CMakeLists.txt  main.cpp
QDir/: CMakeLists.txt  main.cpp
QIODevice/: CMakeLists.txt  main.cpp
QList_Ass/: CMakeLists.txt  main.cpp
QSettings/: CMakeLists.txt  main.cpp
QTemp_FIle/: CMakeLists.txt  main.cpp
QTextStream/: CMakeLists.txt  main.cpp
Qtimer_intervals/: CMakeLists.txt  main.cpp  test.cpp  test.h
Read_Largefiles/: CMakeLists.txt  main.cpp
Reading_Files_2/: CMakeLists.txt  main.cpp  test.txt
Reading_files/: CMakeLists.txt  main.cpp
Setting_FileName/: CMakeLists.txt  main.cpp
Writing_File/: CMakeLists.txt  main.cpp
Writing_file_2/: CMakeLists.txt  main.cpp
appending_files_2/: CMakeLists.txt  main.cpp
build-Assignment_settings-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-File_System-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build-Forex-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-Groups_Settings-Desktop_Qt_6_2_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
read_larger_files/: CMakeLists.txt  main.cpp
(+418 files in other folders)
